Created custom validation. Wrote unit tests for custom validation. Fixed absolutely path to yml file
