# Core/src/main/java/entity/User.java
@@ -4,6 +4,8 @@ import jakarta.persistence.*;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
+import validation.CustomConstraint;
+import validation.ValidationType;
 
 import java.util.List;
 
@@ -17,9 +19,15 @@ public class User {
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
+
     @Column(name = "user_name")
+    @CustomConstraint(type = ValidationType.USERNAME)
     private String userName;
+
+    @CustomConstraint(type = ValidationType.PASSWORD)
     private String password;
+
+    @CustomConstraint(type = ValidationType.EMAIL)
     private String email;
 
     @OneToMany(mappedBy = "user", cascade = CascadeType.ALL, orphanRemoval = true)
@@ -27,5 +35,4 @@ public class User {
 
     @OneToMany(mappedBy = "user", cascade = CascadeType.ALL, orphanRemoval = true)
     private List<Workout> workoutList;
-
 }
