# Core/src/main/java/validation/ValidationType.java
@@ -1,0 +1,5 @@
+package validation;
+
+public enum ValidationType {
+    USERNAME, PASSWORD, EMAIL
+}
